@@ -2,6 +2,7 @@
         - Support inline-structures parameter
         - Introduce --base-foundry, --data-file, and --header-file parameters
         - Introduce --tokens-file parameter
+        - Introduce --skip-inline-tokens parameter
 
 1.00 2021-02-18 Release
         - -s option added that uses sentence boundaries provided by the KorAP tokenizer (-tk)
